ADDED projects and skills

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta property="og:image" content="https://yaslin-portfolio.web.app/portfolioimage.png" />
 </head>
 
 <body>
@@ -46,20 +47,15 @@
             <h2>About Me</h2>
             <span class="underline"></span>
 
-            <p>I'm a programmer with a passion for innovation and problem-solving. With a background in sales and
-                finance, I bring a unique perspective to every project, offering a well-rounded approach to software
-                development.
+            <p>As a programmer, I am driven by a passion for innovation and problem-solving. 
+            With a background in sales and finance, I bring a unique perspective to every project, offering a well-rounded approach to software development.
             </p>
 
-            <p>I thrive on challenges, constantly pushing myself to learn new technologies to help me achieve my goals.
-                If you'd like to know more about my work, please check out my website.
+            <p>I thrive on challenges and constantly strive to expand my knowledge of new technologies to achieve my goals effectively.
             </p>
 
-            <p>You'll find some of my projects
-                there, along with my publications. I am always open to connecting with other professionals in the
-                industry and
-                welcome the opportunity to discuss potential collaborations or projects. I appreciate your interest, and
-                I'm always happy to connect with other professionals in the industry.
+            <p>I have worked on various projects that demonstrate my skills and expertise. 
+            I am always open to connecting with other professionals in the industry and welcome opportunities for collaboration or discussing potential projects. Your interest is appreciated, and I look forward to connecting with fellow industry professionals.
             </p>
             <a href="#contact-me" class="contactbutton"> Contact Me</a>
         </div>
@@ -77,6 +73,26 @@
 
                 <span class="skillbutton"> JavaScript</span>
 
+                <span class="skillbutton"> React</span>
+
+                <span class="skillbutton"> Node</span>
+
+                <span class="skillbutton"> MongoDB</span>
+
+                <span class="skillbutton"> SQL</span>
+
+                <span class="skillbutton"> MySQL</span>
+
+                <span class="skillbutton"> Express</span>
+
+                <span class="skillbutton"> Next.js</span>
+
+                <span class="skillbutton"> Git</span>
+
+                <span class="skillbutton"> Tailwind</span>
+
+                <span class="skillbutton"> Webflow</span>
+
             </div>
         </div>
 
@@ -92,32 +108,39 @@
 
             <div class="card-container">
 
+
                 <div class="card">
-                    <a class="card-link" href="/projectcolorflipper/">
-                        <img class="card-img"
-                        src="/projectcolorflipper/color-flipper.png" alt="Avatar" width="300" height="200">
+                    <a class="card-link" href="https://coffee-grado.web.app/">
+                        <img class="card-img" src="/images/coffee-grado.png" alt="Avatar" width="300"
+                        height="200">
                         <div class="container">
-                            <h4><b>Color Flipper</b></h4>
-                            <p><b>HTML, CSS, JavaScript</b></p>
+                            <h4><b>Coffee Grado</b></h4>
+                            <p><b>React, GCP </b></p>
                         </div>
                     </a>
                 </div>
 
-
                 <div class="card">
-                    <img src="comingsoon.avif" alt="Avatar" style="width:100%">
+
+                    <a class="card-link" href="https://www.jmlendingteam.com/">
+                        <img class="card-img" src="/images/jmlending.png" alt="Avatar" width="300"
+                        height="200">
                     <div class="container">
-                        <h4><b>Upcoming Project</b></h4>
-                        <p><b>TBD</b></p>
+                        <h4><b>JM Lending</b></h4>
+                        <p><b>HTML, CSS, GCP</b></p>
                     </div>
+                    </a>
                 </div>
 
                 <div class="card">
-                    <img src="comingsoon.avif" alt="Avatar" style="width:100%">
-                    <div class="container">
-                        <h4><b>Upcoming Project</b></h4>
-                        <p><b>TBD</b></p>
-                    </div>
+                    <a class="card-link" href="/projectcolorflipper/">
+                        <img class="card-img" src="/images/color-flipper.png" alt="Avatar" width="300"
+                            height="200">
+                        <div class="container">
+                            <h4><b>Color Flipper</b></h4>
+                            <p><b>HTML, CSS, JavaScript, GCP</b></p>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="card">
