--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
 
             <span class="underline"></span>
 
-            <div class="card-container">
+            <div class="card-container marg">
 
 
                 <div class="card">
