UPDATED projects to plural

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
 
         <h1>Hi, I'm Yaslin Carmona</h1>
         <h2>Full Stack Software Engineer</h2>
-        <a href="#projects" class="button">View my Project</a>
+        <a href="#projects" class="button">View my Projects</a>
 
 
     </section>
